# otus_cpp_home_work_7

./: CMakeLists.txt
.github/workflows/: main.yml
src/: main.cpp
src/parser/: command_parser.cpp  command_parser.hpp
src/printer/: console_printer.hpp  file_printer.hpp  printer.hpp
tests/: command_parser_tests.cpp  test_printer.hpp
